[package]
name = "qos-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qos-ebpf-prog"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
network-types = "0.0.7"
qos-common = { path = "../qos-common" }

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.release]
lto = true
panic = "abort"
opt-level = 2
overflow-checks = false
