[package]
name = "qos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qos"
path = "src/main.rs"

[dependencies]
aya = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
qos-common = { path = "../qos-common" }

[dev-dependencies]
proptest = "1"

[build-dependencies]
aya-build = "0.1"
